# OpenGl-Demos

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp
assets/misc/: faceAnimation.txt
assets/models/: bateman.dae  defaultPlane.fbx  defaultSphere.fbx  gas_mask.dae  gas_mask.fbx  hazmat.dae  hazmat.fbx  highpoly.fbx  sphere.dae  sphere.fbx  terrain.fbx  woltor.dae
assets/models/plane/: plane_body.mtl  plane_propeller.mtl
assets/textures/materials/snow_mixed/: ud4lfh2r.json
assets/textures/materials/snow_pure/: uexjfdxn.json
assets/textures/materials/wood_bark/: vmhkaj2g.json
demos/: animation1.h  animation2.h  animation3.h  rendering1.h  rendering2.h  rendering3.h  rendering4.h  tessalationTest.h  test.h
demos/animation3/: animation3.h  manipulator.h
demos/rendering3/: binary_triangle_tree.h  heightmap.cpp  heightmap.h  rendering3.h  roamShader.h  terrain_patch.cpp  terrain_patch.hpp
libs/WIN32/Assimp/lib/assimp/: assimp-vc143-mtd.lib
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: INSTALL_RECEIPT.json
libs/glm/: INSTALL_RECEIPT.json
src/: IKSolver.h  animator.h  bone.h  camera.cpp  camera.h  cubemap.h  entity.h  entityModule.h  gameObject.h  lights.h  material.h  mesh.h  model.cpp  model.h  resourceManager.cpp  resourceManager.h  roam.h  shader.cpp  shader.h  texture.h
src/entityModules/: blendShapeModule.h  camera.h  controllerModule.h  faceManipulation.h  gameplayModule.h  meshManipulatorModule.h  renderModelModule.h  renderModule.h
src/imgui/: imguiWrapper.cpp  imguiWrapper.h
src/materials/: basicMaterial.h  glassMaterial.h  pbrMaterial.h  tessMaterial.h  texturedMaterial.h  toonMaterial.h
src/shaders/debug/: animDebugShader.h
src/shaders/forwardPass/: baseShader.frag  baseShader.vert  blinnPhong.vert  blinnPhongShader.h  forwardShader.h  pbrShader.frag  pbrShader.h  pbrShader.vert  testShader.frag  testShader.h  testShader.vert  toonShader.frag  toonShader.h  toonShader.vert
src/shaders/forwardPass/animated/: animShader.h  animShader.vert
src/shaders/forwardPass/cook-torrace/: pbrShader.frag  pbrShader.h  pbrShader.vert
src/shaders/forwardPass/phong/: blinnPhong.frag  blinnPhongShader.h  blinnPhongTex.frag  blinnPhongTex.vert  blinnPhongTexShader.h
src/shaders/forwardPass/tessalation/: tessShader.frag  tessShader.geom  tessShader.h  tessShader.tcs  tessShader.tes  tessShader.tesc  tessShader.tese  tessShader.vert  tessShaderView.tesc
src/shaders/forwardPass/textured/: texturedShader.frag  texturedShader.h  texturedShader.vert
src/shaders/forwardPass/toon/: outlineShader.frag  outlineShader.h  outlineShader.vert  toonShader.frag  toonShader.h
src/shaders/forwardPass/transmittance/: glassShader.frag  glassShader.h  glassShader.vert
src/shaders/skybox/: cubemap.h  skyboxShader.frag  skyboxShader.h  skyboxShader.vert
src/utils/: animData.h  captureDepth.h  programInfo.h  stb_image.h
